# keycard-qt

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
android/: build.gradle  settings.gradle
android/src/main/java/im/status/keycard/android/: KeycardNfcReader.java
cmake/: AndroidNfcJar.cmake
docs/: ANDROID_JAR_USAGE.md  AUTO_MAVEN_PUBLISH_GUIDE.md  GRADLE_DEPENDENCY_QUICKSTART.md  GRADLE_DEPENDENCY_USAGE.md  IOS_NFC_SETUP.md  SELF_CONTAINED_JAR_IMPLEMENTATION.md  STATUS_DESKTOP_GRADLE_INTEGRATION.md  STATUS_DESKTOP_INTEGRATION.md
examples/: CMakeLists.txt  advanced_test.cpp  factory_reset_test.cpp  full_integration_test.cpp  full_test.cpp  pair_test.cpp
include/keycard-qt/: channel_interface.h  command_set.h  keycard_channel.h  qt_nfc_android_workarounds.h  secure_channel.h  types.h
include/keycard-qt/apdu/: response.h
include/keycard-qt/backends/: keycard_channel_android_nfc.h  keycard_channel_backend.h  keycard_channel_pcsc.h  keycard_channel_qt_nfc.h
include/keycard-qt/types/: application_status.h
ios/: Entitlements.plist
src/: command_set.cpp
src/apdu/: response.cpp  utils.cpp
src/channel/: android_jni_register.cpp  keycard_channel.cpp
src/channel/backends/: keycard_channel_android_nfc.cpp  keycard_channel_pcsc.cpp  keycard_channel_qt_nfc.cpp
src/crypto/: secure_channel.cpp
src/types/: application_info.cpp  application_status.cpp
tests/: CMakeLists.txt  test_apdu_command.cpp  test_apdu_response.cpp  test_apdu_utils.cpp  test_command_set.cpp  test_command_set_extended.cpp  test_command_set_new.cpp  test_init_pair.cpp  test_keycard_channel.cpp  test_keycard_channel_di.cpp  test_pbkdf2.cpp  test_secure_channel.cpp  test_secure_channel_extended.cpp  test_types.cpp
tests/mocks/: mock_backend.cpp  mock_backend.h
